--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "malik/contact",
+    "name": "maliksssssssssssss/contact",
     "description": "send email to admin and save contact to database",
     "type": "library",
     "license": "MIT",
