auto discovery properties added to composer.json file

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,13 @@
         "psr-4": {
             "Bitfumes\\Contact\\":"src/"
         }
-    }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Bitfumes\\Contact\\ContactServiceProvider"
+            ],
+      
+        }
+    },
 }
