discovery for package provider

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,14 @@
         "psr-4": {
             "Bitfumes\\Contact\\":"src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Barryvdh\\Debugbar\\ServiceProvider"
+            ]
+     
+        }
     }
 
 }
